# airbnb-clone-2022

./: pyproject.toml
bookings/: models.py  serializers.py
bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py
categories/: admin.py  models.py  serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_options.py
config/: authentication.py  settings.py  urls.py
direct_messages/: models.py
direct_messages/migrations/: 0001_initial.py
experiences/: models.py  views.py
experiences/migrations/: 0001_initial.py  0002_experience_category_alter_perk_details_and_more.py
houses/: models.py
houses/migrations/: 0001_initial.py
medias/: models.py  serializers.py  views.py
medias/migrations/: 0001_initial.py  0002_alter_photo_file_alter_video_file.py
reviews/: admin.py  models.py
reviews/migrations/: 0001_initial.py  0002_alter_review_experience_alter_review_room_and_more.py
rooms/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
rooms/migrations/: 0001_initial.py  0002_alter_amenity_created_at_alter_amenity_updated_at_and_more.py  0003_room_name_alter_amenity_description.py  0004_alter_amenity_options.py  0005_room_category.py  0006_alter_room_amenities_alter_room_category_and_more.py
rooms/templates/: all_rooms.html
users/: admin.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_rename_profile_photo_user_avatar.py  0003_alter_user_avatar.py  0004_alter_user_avatar.py
wishlists/: models.py  serializers.py  views.py
(+2 files in other folders)
